<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/card_type_setting"
        android:layout_height="56dp"
        android:layout_width="wrap_content"
        android:text="Card Type Setting"
        android:textColor="@color/textSecondary"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/arl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ARL Fare Rate"
        android:textSize="12sp"
        android:textColor="@color/textSecondary"
        app:layout_constraintTop_toBottomOf="@+id/card_type_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin" />

    <RadioGroup
        android:id="@+id/arl_group"
        android:tag="ARL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/arl_text"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/arl_normal"
            android:tag="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />
        <RadioButton
            android:id="@+id/arl_adult"
            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult" />
        <RadioButton
            android:id="@+id/arl_student"
            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />
        <RadioButton
            android:id="@+id/arl_senior"
            android:tag="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior"/>
    </RadioGroup>

    <TextView
        android:id="@+id/bts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BTS Fare Rate"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textColor="@color/textSecondary"
        app:layout_constraintTop_toBottomOf="@+id/arl_group"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/bts_group"
        android:tag="BTS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/bts_text"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/bts_normal"
            android:tag="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />
        <RadioButton
            android:id="@+id/bts_adult"
            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult" />
        <RadioButton
            android:id="@+id/bts_student"
            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />
        <RadioButton
            android:id="@+id/bts_senior"
            android:tag="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior"/>
    </RadioGroup>

    <TextView
        android:id="@+id/mrt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MRT Fare Rate"
        android:textSize="12sp"
        android:textColor="@color/textSecondary"
        app:layout_constraintTop_toBottomOf="@+id/bts_group"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <th.in.route.routeinth.view.RadioGroup
        android:id="@+id/mrt_group"
        android:tag="MRT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/mrt_text"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/mrt_normal"
            android:tag="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <RadioButton
            android:id="@+id/mrt_adult"
            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult"
            app:layout_constraintTop_toTopOf="@+id/mrt_normal"
            app:layout_constraintLeft_toRightOf="@+id/mrt_normal" />
        <RadioButton
            android:id="@+id/mrt_student"
            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            app:layout_constraintTop_toTopOf="@+id/mrt_adult"
            app:layout_constraintLeft_toRightOf="@+id/mrt_adult" />
        <RadioButton
            android:id="@+id/mrt_senior"
            android:tag="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elder"
            app:layout_constraintTop_toTopOf="@+id/mrt_student"
            app:layout_constraintLeft_toRightOf="@+id/mrt_student"/>
        <RadioButton
            android:id="@+id/mrt_child"
            android:tag="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child"
            app:layout_constraintTop_toBottomOf="@+id/mrt_normal"
            app:layout_constraintLeft_toLeftOf="@+id/mrt_normal"/>
    </th.in.route.routeinth.view.RadioGroup>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@+id/mrt_group"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/line1"
        android:layout_height="1dp"
        android:layout_width="0dp"
        android:background="@color/divider"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
